--- a/partial/_style.scss
+++ b/partial/_style.scss
@@ -1,6 +1,6 @@
 .main-container{
     height: 100%;
-    background-color:  #fb6242;   
+    background-color:  #f04939;   
     section{
         display: flex;
         flex-direction: column;
@@ -40,7 +40,7 @@
         margin-top: 20px;
      }
      span{
-        color: #fb6242;
+        color: #f04939;
     }
      .div-button{
         display: flex;
@@ -48,7 +48,7 @@
         margin-top: 20px;
         i{
          font-size: 30px;
-         color: #fb6242;
+         color: #f04939;
         }
         a{
             color: aliceblue;
