--- a/partial/_page2.scss
+++ b/partial/_page2.scss
@@ -84,7 +84,8 @@ section{
             align-items: center;
             background-color: #fb6242 ;
             border-radius: 50px;
-            padding: 5px;
+            padding:0px 15px;
+            text-transform: lowercase;
             h6{
                 color: aliceblue;
             }
@@ -104,6 +105,9 @@ section{
         a{
             text-decoration: none;
             color: aliceblue;
+        }
+        h3{
+            font-size: 15px;
         }
     }
     .SHOES{
@@ -149,8 +153,8 @@ section{
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                gap: 5px;
-                font-size: 15px;
+                gap: 10px;
+                font-size: 10px;
                 padding: 5px 25px;
                 border-radius: 10px;
                 h5{
@@ -174,6 +178,9 @@ section{
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            i{
+                font-size: 20px;
+            }
         }
     }
 }
