--- a/partial/_page4.scss
+++ b/partial/_page4.scss
@@ -1,10 +1,10 @@
 .page-4{
-    background-color: aliceblue;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    // color: aliceblue;
     h3{
         color: #232b38;
     }
@@ -30,6 +30,8 @@
     .text-container{
         display: flex;
         flex-direction: column;
+        color: aliceblue;
+        background-color: black;
         gap: 20px;
         i{
             color: tomato;
