--- a/partial/_page4.scss
+++ b/partial/_page4.scss
@@ -1,4 +1,5 @@
 .page-4{
+    background-color: zip($lists: );
     width: 100vw;
     height: 100%;
     display: flex;
@@ -6,7 +7,7 @@
     gap: 1rem;
     // color: aliceblue;
     h3{
-        color: #232b38;
+        color: white;
     }
     header{
         display: flex;
@@ -32,6 +33,9 @@
         flex-direction: column;
         color: aliceblue;
         background-color: black;
+        h3{
+            color: white;
+        }
         gap: 20px;
         i{
             color: tomato;
