--- a/partial/_page6.scss
+++ b/partial/_page6.scss
@@ -1,12 +1,12 @@
 .page-4{
-    background-color: aliceblue;
+    // background-color: aliceblue;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
     h3{
-        color: #232b38;
+        color: white;
     }
     header{
         display: flex;
