--- a/partial/_page7.scss
+++ b/partial/_page7.scss
@@ -1,5 +1,5 @@
 .page-4{
-    background-color: aliceblue;
+    // background-color: aliceblue;
     width: 100%;
     height: 100%;
     display: flex;
@@ -7,7 +7,7 @@
     color: aliceblue;
     gap: 1rem;
     h3{
-        color: #232b38;
+        color: white;
     }
     header{
         display: flex;
